--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -9,6 +9,7 @@
 @import 'services';
 @import 'inner';
 @import 'works';
+@import 'articles';
 @import 'modal';
 @import 'pagination';
 // @import 'nav';
