--- a/app/template/scss/_homepage.scss
+++ b/app/template/scss/_homepage.scss
@@ -299,47 +299,7 @@ $h1 : 360px;
 		}
 	}
 
-	// article
-	&__article{
-		width: 219px;
-		padding: 6px;
-		border: 1px solid #e9e9e9;
-		box-shadow: 0 0 5px #ccc;
-		&-link{
-			text-decoration: none;
-			&:hover{
-				.rubrics__article{
-					&-title{
-						filter: grayscale(0);
-					}
-					&-pic{
-						opacity: 1;
-					}
-				}
-			}
-		}
-		&-pic{
-			@include transition-param;
-			opacity: .8;
-			img{
-				vertical-align: top;
-			}
-		}
-		&-title{
-			@extend .bold;
-			@extend .flexcenter;
-			@extend .gradient-green;
-			@include font-size(1.5);
-			@include transition-param(filter);
-			color: $color2;
-			display: flex;
-			filter: grayscale(1);
-			height: 104px;
-			text-align: center;
-			text-transform: uppercase;
-			width: 100%;
-		}
-	}
+
 
 	// reviews
 	&__reviews{
@@ -349,6 +309,49 @@ $h1 : 360px;
 			height: auto;
 			margin-bottom: 2rem;
 		}
+	}
+}
+
+// article
+.article{
+	&__link{
+		display: block;
+		border: 1px solid #e9e9e9;
+		box-shadow: 0 0 5px #ccc;
+		padding: 6px;
+		width: 219px;
+		text-decoration: none;
+		&:hover{
+			.article{
+				&__title{
+					filter: grayscale(0);
+				}
+				&__pic{
+					opacity: 1;
+				}
+			}
+		}
+	}
+	&__pic{
+		@include transition-param;
+		opacity: .8;
+		img{
+			vertical-align: top;
+		}
+	}
+	&__title{
+		@extend .bold;
+		@extend .flexcenter;
+		@extend .gradient-green;
+		@include font-size(1.5);
+		@include transition-param(filter);
+		color: $color2;
+		display: flex;
+		filter: grayscale(1);
+		height: 104px;
+		text-align: center;
+		text-transform: uppercase;
+		width: 100%;
 	}
 }
 /* =/rubrics
