--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -32,29 +32,6 @@
   ---------------------------------------------------
     A set of useful SCSS mixins
   ---------------------------------------------------*/
-/*
-.columns(@colwidth: 250px, @colcount: 0, @colgap: 50px, @columnRuleColor: #EEE, @columnRuleStyle: solid, @columnRuleWidth: 1px) {
-  -moz-column-width: @colwidth;
-  -moz-column-count: @colcount;
-  -moz-column-gap: @colgap;
-  -moz-column-rule-color: @columnRuleColor;
-  -moz-column-rule-style: @columnRuleStyle;
-  -moz-column-rule-width: @columnRuleWidth;
-  -webkit-column-width: @colwidth;
-  -webkit-column-count: @colcount;
-  -webkit-column-gap: @colgap;
-  -webkit-column-rule-color: @columnRuleColor;
-  -webkit-column-rule-style: @columnRuleStyle;
-  -webkit-column-rule-width: @columnRuleWidth;
-  column-width: @colwidth;
-  column-count: @colcount;
-  column-gap: @colgap;
-  column-rule-color: @columnRuleColor;
-  column-rule-style: @columnRuleStyle;
-  column-rule-width: @columnRuleWidth;
-}
-
-*/
 /*** reset ***********/
 html, body, ul, ol, li, dl, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, a, img, label {
   margin: 0;
@@ -153,18 +130,19 @@ input::-moz-focus-inner {
 .cgi, .contacts__ring, .footer__navcopyright .copyright__right, .kreotif, .reviews__top {
   font-family: 'CenturyGothicItalic'; }
 
-.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .article__title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, main.text h3, .btn, .photo__title,
+.bold, h1, .title, .contacts__tel, .slider__text, .services__title, .sqicons__item-title, .article__title, .feedback__form .submit, .team header h2, .team__name, .allservices__item-title, .allservices__item .goody__item-title, main.text h3, main.text strong, .btn, .photo__title,
 .video__title, .close-modal span {
   font-family: "SegoeUIBold"; }
 
-.italic, .neck .writeus-link, .more, .policy, .footer__cities, .share, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, main.text em, .reviews__carousel, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content, .pagination {
+.italic, .neck .writeus-link, .more, .policy, .footer__cities, .share, .rubrics__news, .rubrics__faq, .rubrics__reviews, .feedback__form .row .form-control, .feedback__form .row textarea, .feedback__form .submit, .breadcrumbs, main.text em, main.text .accordion, .reviews__carousel, .modal-dialog .title, .modal form, .modal form .form-control, .modal form .submit, #infomodal .modal__content, #about .modal__content, .pagination {
   font-family: "SegoeUIItalic"; }
 
 /*** standart classes *****/
 a {
   color: #020000;
   -webkit-transition: all 0.2s ease-out;
-  transition: all 0.2s ease-out; }
+  transition: all 0.2s ease-out;
+  text-decoration-skip: ink; }
 
 h1 {
   font-size: 2.4rem;
@@ -1152,14 +1130,53 @@ main.text {
     margin: .5rem 0; }
   main.text em {
     font-style: normal; }
+  main.text strong {
+    font-weight: normal; }
   main.text table {
     margin: 2rem 0 0;
     border-collapse: collapse; }
     main.text table td {
       border: 1px solid #ccc;
-      padding: 8px; }
+      padding: 8px;
+      vertical-align: top; }
     main.text table.table-noborder td {
       border: none; }
+  main.text .columns {
+    display: flex; }
+    main.text .columns .column {
+      flex-basis: 50%;
+      padding-right: 1rem; }
+  main.text .accordion {
+    margin: 0 2.5rem 2rem; }
+    main.text .accordion .item {
+      margin-top: 2.3rem; }
+    main.text .accordion__title {
+      font-size: 15px;
+      font-size: 1.5rem;
+      font-weight: normal; }
+      main.text .accordion__title a {
+        background-color: #307a56;
+        display: block;
+        padding: 1rem 1.7rem;
+        color: #fff; }
+        main.text .accordion__title a span {
+          border-bottom: 1px dashed #f2f2f2; }
+        main.text .accordion__title a.collapsed {
+          background-color: #f2f2f2;
+          color: #666; }
+        main.text .accordion__title a:hover {
+          text-decoration: none;
+          background-color: #307a56;
+          color: #fff; }
+          main.text .accordion__title a:hover span {
+            border-bottom-color: #307a56; }
+    main.text .accordion__body {
+      padding-left: 1.7rem;
+      padding-bottom: 1rem; }
+      main.text .accordion__body li {
+        margin: .5rem 0; }
+      main.text .accordion__body h3 {
+        font-family: "SegoeUIBoldItalic"; }
 
 .gallery {
   margin-top: 2.8rem; }
@@ -1178,7 +1195,7 @@ main.text {
       .gallery__item a:after {
         -webkit-transition: all 0.2s ease-out;
         transition: all 0.2s ease-out;
-        background: url(../images/zoom.png) no-repeat center center rgba(0, 122, 187, 0.55);
+        background: url(../images/zoom.png) no-repeat center center rgba(48, 122, 86, 0.55);
         height: 100%;
         left: 0;
         opacity: 0;
@@ -1269,6 +1286,10 @@ main.text {
         left: 0; }
     .listlinks .flexbox a:hover {
       color: #307a56; }
+
+.line {
+  border-top: 1px solid;
+  border-image: linear-gradient(to left, white 1%, #9bbcaa 50%, white 100%) 100% 0 100% 0; }
 
 /* =subcat
 ---------------------------*/
@@ -1390,6 +1411,11 @@ main.text {
     .articles .article__link {
       display: block;
       width: 219px; }
+
+.text .collapse.show,
+.text .collapsing {
+  color: #fff;
+  background: #307a56; }
 
 .modal-open {
   overflow: hidden; }
@@ -1596,6 +1622,29 @@ form .thank {
   .pagination .current {
     color: #307a56;
     text-decoration: underline; }
+
+.fade {
+  opacity: 0;
+  transition: opacity .15s linear; }
+  .fade.show {
+    opacity: 1; }
+
+.collapse {
+  display: none; }
+  .collapse.show {
+    display: block; }
+
+tr.collapse.show {
+  display: table-row; }
+
+tbody.collapse.show {
+  display: table-row-group; }
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  transition: height .35s ease; }
 
 /* =mobile-menu
 ---------------------------*/
