--- a/app/template/scss/_base.scss
+++ b/app/template/scss/_base.scss
@@ -15,6 +15,7 @@ $color10:#f2f2f2;
 $color11: #303030;
 $color12: #808080;
 $color13: #f5f5f5;
+$color14: #666;
 
 
 * {
@@ -152,7 +153,7 @@ input::-moz-focus-inner{
 
 /*** standart classes *****/
 p{}
-a{color:#020000; @include transition;}
+a{color:#020000; @include transition;text-decoration-skip: ink;}
 h1{font-size:2.4rem; @extend .bold; text-align: center; text-transform: uppercase;}
 h2{font-size:2.4rem; font-weight: normal;}
 h3{font-size:1.6rem; font-weight: normal;}
