--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -13,7 +13,7 @@
 @import 'modal';
 @import 'pagination';
 // @import 'nav';
-// @import 'transitions';
+@import 'transitions';
 @import 'mobmenu'; 
 @import 'browsers';
 @import 'responsive-base';
