--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -10,6 +10,7 @@
 @import 'inner';
 @import 'works';
 @import 'articles';
+@import 'news';
 @import 'modal';
 @import 'pagination';
 // @import 'nav';
