--- a/app/template/scss/_homepage.scss
+++ b/app/template/scss/_homepage.scss
@@ -278,13 +278,13 @@ $h1 : 360px;
 	&__faq,
 	&__reviews{
 		@extend .italic;
-		&__item{
+		&-item{
 			box-shadow: 0 0 5px #ccc;
 			padding: 1rem 1rem 2rem;
 			width: 22rem;
 		}
 
-		&__title{
+		&-title{
 			@include font-size(1.4);
 			font-family: "SegoeUIBoldItalic";
 			height: 9rem;
