--- a/app/template/scss/styles.scss
+++ b/app/template/scss/styles.scss
@@ -11,6 +11,7 @@
 @import 'works';
 @import 'articles';
 @import 'news';
+@import 'error';
 @import 'modal';
 @import 'pagination';
 // @import 'nav';
