--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -197,6 +197,26 @@ input::-moz-focus-inner {
   .form-control:focus, .form-control:active {
     border-color: #307a56 !important; }
 
+.visual-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap; }
+
+.services__pic img,
+.partners__item img {
+  background-image: url('data:image/svg+xml;utf8, <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.0" width="64px" height="64px" viewBox="0 0 128 128" xml:space="preserve"><g><path d="M78.75 16.18V1.56a64.1 64.1 0 0 1 47.7 47.7H111.8a49.98 49.98 0 0 0-33.07-33.08zM16.43 49.25H1.8a64.1 64.1 0 0 1 47.7-47.7V16.2a49.98 49.98 0 0 0-33.07 33.07zm33.07 62.32v14.62A64.1 64.1 0 0 1 1.8 78.5h14.63a49.98 49.98 0 0 0 33.07 33.07zm62.32-33.07h14.62a64.1 64.1 0 0 1-47.7 47.7v-14.63a49.98 49.98 0 0 0 33.08-33.07z" fill="#000000"/><animateTransform attributeName="transform" type="rotate" from="0 64 64" to="-90 64 64" dur="1800ms" repeatCount="indefinite"></animateTransform></g></svg>');
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 64px;
+  min-width: 64px; }
+
 .flexbox {
   display: -webkit-box;
   display: -webkit-flex;
@@ -634,7 +654,7 @@ label.error {
       width: 100%;
       z-index: 1; }
     .services__item a:hover:after {
-      opacity: 1; }
+      opacity: .8; }
   .services__item hr {
     background: #fff;
     border: none;
